# portfolio

./: package-lock.json  package.json
backend/: .gitignore  Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Dockerfile  config-overrides.js  package.json  tailwind.config.js
frontend/public/locales/en/: translation.json
frontend/public/locales/fr/: translation.json
frontend/src/: index.css
frontend/src/components/public/: Nav.jsx
frontend/src/pages/: Blog.jsx  Contact.jsx
portfolio/: package-lock.json  package.json
portfolio/public/: index.html
portfolio/src/: App.js  index.css
portfolio/src/components/: Nav.jsx  Work.jsx  body.jsx
portfolio/src/components/public/: Nav.jsx
portfolio/src/pages/: About.jsx  Home.jsx  Work.jsx
public/locales/en/: translation.json
public/locales/fr/: translation.json
src/: App.js  i18n.js
src/components/public/: Nav.jsx
src/pages/: About.jsx  Contact.jsx  Home.jsx  Work.jsx
