[package]
name = "portfolio-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
rss = "2.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
regex = "1.5"
futures = "0.3"
